--- a/index.html
+++ b/index.html
@@ -1,39 +1,107 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>شركة الغثوان للتجارة</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>شركة الغثوان للتجارة | Al Ghaswan Trading</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
-      padding: 60px 20px;
+      background-color: #f9f9f9;
+      color: #222;
       text-align: center;
     }
-    h1 {
-      color: #005580;
-      font-size: 2.5em;
-      margin-bottom: 20px;
+    header {
+      background-color: #004d40;
+      color: white;
+      padding: 30px 20px;
     }
-    p {
-      font-size: 1.2em;
+    header img {
+      max-height: 70px;
+    }
+    h1 {
+      font-size: 2em;
       margin: 10px 0;
     }
-    .footer {
-      margin-top: 40px;
+    .section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .section h2 {
+      color: #00695c;
+    }
+    p {
+      line-height: 1.8;
+      font-size: 1.1em;
+    }
+    .contact a {
+      display: inline-block;
+      margin: 10px 10px;
+      padding: 10px 25px;
+      background-color: #00796b;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    footer {
+      background-color: #e0e0e0;
+      color: #555;
+      padding: 20px;
       font-size: 0.9em;
-      color: #777;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>شركة الغثوان للتجارة</h1>
-  <p>مرحبًا بكم في الموقع الرسمي لشركتنا.</p>
-  <p>📧 info@alghaswan.com | 📞 +974 6685 8268</p>
-  <div class="footer">
-    &copy; 2025 Alghaswan Trading Company – جميع الحقوق محفوظة.
+
+  <header>
+    <img src="logo.png" alt="شعار الغثوان" />
+    <h1>شركة الغثوان للتجارة</h1>
+    <h2>Al Ghaswan Trading L.L.C</h2>
+  </header>
+
+  <div class="section">
+    <h2>من نحن</h2>
+    <p>
+      شركة الغثوان للتجارة هي المصدر الموثوق للسلع الزراعية والمنتجات الغذائية من مختلف أنحاء العالم، مقرها الدوحة – قطر، وتتمتع بخبرة دولية تفوق 10 سنوات.
+    </p>
+    <p dir="ltr">
+      Al Ghaswan Trading is your trusted partner for global agro-commodities and food products, based in Doha – Qatar with over 10 years of international experience.
+    </p>
   </div>
+
+  <div class="section">
+    <h2>مهمتنا ورؤيتنا</h2>
+    <p>
+      رضا العملاء هو أولويتنا القصوى. نحرص على تقديم منتجات عالية الجودة بأفضل الأسعار، مدعومة بخدمة عملاء مميزة.
+    </p>
+    <p dir="ltr">
+      Our mission is customer satisfaction. We deliver top-quality products at competitive prices with outstanding service.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>منتجاتنا</h2>
+    <p>
+      بهارات، بذور للأكل، مكسرات، أعلاف، فواكه مجففة، حبوب، ذرة صفراء، نخالة بيضاء، كسبة صويا، أعلاف دواجن، وأعلاف أبقار حلوب.
+    </p>
+    <p dir="ltr">
+      Spices, Edible Seeds, Nuts, Animal Feed, Dried Fruits, Grains, Yellow Corn, White Bran, Soybean Meal, Poultry and Dairy Cattle Feed.
+    </p>
+  </div>
+
+  <div class="section contact">
+    <h2>تواصل معنا</h2>
+    <a href="mailto:hani@alghaswan.com">📧 hani@alghaswan.com</a>
+    <a href="tel:+97466858268">📞 +974 6685 8268</a>
+    <a href="https://wa.me/97466858268" target="_blank">💬 واتساب</a>
+  </div>
+
+  <footer>
+    &copy; 2025 شركة الغثوان للتجارة – جميع الحقوق محفوظة.
+  </footer>
+
 </body>
 </html>
