--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
       line-height: 1.8;
       font-size: 1.1em;
     }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
+    a {
+      color: #00796b;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .contact a {
       display: inline-block;
       margin: 10px 10px;
@@ -92,9 +104,39 @@
     </p>
   </div>
 
+  <div class="section">
+    <h2>شركاتنا التابعة</h2>
+    <p>
+      تعمل شركة الغثوان عبر مجموعة من العلامات التجارية الرائدة في مجالات متعددة:
+    </p>
+    <ul>
+      <li>
+        🌿 <strong>شركة الألوة للعود</strong> – متخصصة في العطور والبخاخات الفاخرة.<br>
+        <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">زيارة الموقع</a>
+      </li>
+      <li>
+        🛋️ <strong>FOA QATAR</strong> – الوكيل الرسمي لمفروشات Furniture of America في قطر.<br>
+        <a href="https://foagroupqa.com/en-qa" target="_blank">زيارة الموقع</a>
+      </li>
+    </ul>
+    <p dir="ltr">
+      Our group includes leading brands in perfumes and furniture:
+    </p>
+    <ul dir="ltr">
+      <li>
+        🌿 <strong>Al Alwa Oud</strong> – Premium perfumes and sprays.<br>
+        <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">Visit site</a>
+      </li>
+      <li>
+        🛋️ <strong>FOA QATAR</strong> – Official dealer of Furniture of America in Qatar.<br>
+        <a href="https://foagroupqa.com/en-qa" target="_blank">Visit site</a>
+      </li>
+    </ul>
+  </div>
+
   <div class="section contact">
     <h2>تواصل معنا</h2>
-    <a href="mailto:hani@alghaswan.com">📧 hani@alghaswan.com</a>
+    <a href="mailto:info@alghaswan.com">📧 info@alghaswan.com</a>
     <a href="tel:+97466858268">📞 +974 6685 8268</a>
     <a href="https://wa.me/97466858268" target="_blank">💬 واتساب</a>
   </div>
