--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <div class="section contact">
     <h2>تواصل معنا</h2>
-    <a href="mailto:info@alghaswan.com">📧 info@alghaswan.com</a>
+    <a href="mailto:hani@alghaswan.com">📧 hani@alghaswan.com</a>
     <a href="tel:+97466858268">📞 +974 6685 8268</a>
     <a href="https://wa.me/97466858268" target="_blank">💬 واتساب</a>
   </div>
