--- a/index.html
+++ b/index.html
@@ -1,148 +1,85 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>شركة الغثوان للتجارة | Al Ghaswan Trading</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>شركة الغثوان للتجارة</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-      text-align: center;
-    }
-    header {
-      background-color: #004d40;
-      color: white;
-      padding: 30px 20px;
-    }
-    header img {
-      max-height: 70px;
-    }
-    h1 {
-      font-size: 2em;
-      margin: 10px 0;
-    }
-    .section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    .section h2 {
-      color: #00695c;
-    }
-    p {
-      line-height: 1.8;
-      font-size: 1.1em;
-    }
-    ul {
-      list-style: none;
+      background: #f4f4f4;
+      margin: 0;
       padding: 0;
+      text-align: center;
+      color: #333;
     }
-    li {
-      margin: 10px 0;
+
+    header {
+      background-color: #ffffff;
+      padding: 30px 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-    a {
-      color: #00796b;
+
+    img.logo {
+      width: 150px;
+    }
+
+    h1 {
+      margin-top: 10px;
+      color: #008c5f;
+    }
+
+    section {
+      margin: 40px auto;
+      max-width: 700px;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      color: #444;
+    }
+
+    .company {
+      margin: 30px 0;
+    }
+
+    .company a {
+      display: block;
       text-decoration: none;
+      font-size: 18px;
+      margin: 8px 0;
+      color: #0077cc;
       font-weight: bold;
     }
-    .contact a {
-      display: inline-block;
-      margin: 10px 10px;
-      padding: 10px 25px;
-      background-color: #00796b;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-    }
+
     footer {
-      background-color: #e0e0e0;
-      color: #555;
-      padding: 20px;
-      font-size: 0.9em;
-      margin-top: 30px;
+      background: #eee;
+      padding: 15px;
+      margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="logo.png" alt="شعار الغثوان" />
+    <img src="logo.png" alt="شعار الغثوان" class="logo">
     <h1>شركة الغثوان للتجارة</h1>
-    <h2>Al Ghaswan Trading L.L.C</h2>
   </header>
 
-  <div class="section">
-    <h2>من نحن</h2>
-    <p>
-      شركة الغثوان للتجارة هي المصدر الموثوق للسلع الزراعية والمنتجات الغذائية من مختلف أنحاء العالم، مقرها الدوحة – قطر، وتتمتع بخبرة دولية تفوق 10 سنوات.
-    </p>
-    <p dir="ltr">
-      Al Ghaswan Trading is your trusted partner for global agro-commodities and food products, based in Doha – Qatar with over 10 years of international experience.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>مهمتنا ورؤيتنا</h2>
-    <p>
-      رضا العملاء هو أولويتنا القصوى. نحرص على تقديم منتجات عالية الجودة بأفضل الأسعار، مدعومة بخدمة عملاء مميزة.
-    </p>
-    <p dir="ltr">
-      Our mission is customer satisfaction. We deliver top-quality products at competitive prices with outstanding service.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>منتجاتنا</h2>
-    <p>
-      بهارات، بذور للأكل، مكسرات، أعلاف، فواكه مجففة، حبوب، ذرة صفراء، نخالة بيضاء، كسبة صويا، أعلاف دواجن، وأعلاف أبقار حلوب.
-    </p>
-    <p dir="ltr">
-      Spices, Edible Seeds, Nuts, Animal Feed, Dried Fruits, Grains, Yellow Corn, White Bran, Soybean Meal, Poultry and Dairy Cattle Feed.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>شركاتنا التابعة</h2>
-    <p>
-      تعمل شركة الغثوان عبر مجموعة من العلامات التجارية الرائدة في مجالات متعددة:
-    </p>
-    <ul>
-      <li>
-        🌿 <strong>شركة الألوة للعود</strong> – متخصصة في العطور والبخاخات الفاخرة.<br>
-        <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">زيارة الموقع</a>
-      </li>
-      <li>
-        🛋️ <strong>FOA QATAR</strong> – الوكيل الرسمي لمفروشات Furniture of America في قطر.<br>
-        <a href="https://foagroupqa.com/en-qa" target="_blank">زيارة الموقع</a>
-      </li>
-    </ul>
-    <p dir="ltr">
-      Our group includes leading brands in perfumes and furniture:
-    </p>
-    <ul dir="ltr">
-      <li>
-        🌿 <strong>Al Alwa Oud</strong> – Premium perfumes and sprays.<br>
-        <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">Visit site</a>
-      </li>
-      <li>
-        🛋️ <strong>FOA QATAR</strong> – Official dealer of Furniture of America in Qatar.<br>
-        <a href="https://foagroupqa.com/en-qa" target="_blank">Visit site</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="section contact">
-    <h2>تواصل معنا</h2>
-    <a href="mailto:hani@alghaswan.com">📧 hani@alghaswan.com</a>
-    <a href="tel:+97466858268">📞 +974 6685 8268</a>
-    <a href="https://wa.me/97466858268" target="_blank">💬 واتساب</a>
-  </div>
+  <section>
+    <h2>الشركات التابعة:</h2>
+    <div class="company">
+      <a href="https://foagroupqa.com/en-qa" target="_blank">FOA QATAR</a>
+      <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">AL ALWA OUD</a>
+    </div>
+  </section>
 
   <footer>
-    &copy; 2025 شركة الغثوان للتجارة – جميع الحقوق محفوظة.
+    جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان
   </footer>
 
 </body>
