--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 
     h2 {
       color: #444;
-    }
-
-    .company {
-      margin: 30px 0;
+      margin-bottom: 10px;
     }
 
     .company a {
@@ -53,6 +50,11 @@
       margin: 8px 0;
       color: #0077cc;
       font-weight: bold;
+    }
+
+    p {
+      line-height: 1.8;
+      font-size: 16px;
     }
 
     footer {
@@ -71,6 +73,13 @@
   </header>
 
   <section>
+    <h2>من نحن</h2>
+    <p>
+      شركة الغثوان هي مجموعة تجارية رائدة تتخذ من قطر مقرًا لها، وتعمل على تطوير مشاريع نوعية في مجالات المفروشات، والعطور، والصناعات الغذائية. نؤمن بالإبداع والاستدامة، ونهدف إلى تقديم منتجات وخدمات ذات جودة عالية تواكب تطلعات الأسواق المحلية والعالمية.
+    </p>
+  </section>
+
+  <section>
     <h2>الشركات التابعة:</h2>
     <div class="company">
       <a href="https://foagroupqa.com/en-qa" target="_blank">FOA QATAR</a>
@@ -79,7 +88,7 @@
   </section>
 
   <footer>
-    جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان
+    جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان للتجارة
   </footer>
 
 </body>
