--- a/index.html
+++ b/index.html
@@ -52,9 +52,23 @@
       font-weight: bold;
     }
 
-    p {
-      line-height: 1.8;
+    .contact a {
+      display: block;
+      margin: 5px 0;
+      color: #006400;
+      text-decoration: none;
       font-size: 16px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #008c5f;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
     }
 
     footer {
@@ -62,6 +76,13 @@
       padding: 15px;
       margin-top: 40px;
       font-size: 14px;
+    }
+
+    hr {
+      margin: 40px auto;
+      width: 80%;
+      border: none;
+      border-top: 1px solid #ccc;
     }
   </style>
 </head>
@@ -85,6 +106,37 @@
       <a href="https://foagroupqa.com/en-qa" target="_blank">FOA QATAR</a>
       <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">AL ALWA OUD</a>
     </div>
+  </section>
+
+  <section>
+    <h2>تواصل معنا</h2>
+    <div class="contact">
+      <a href="mailto:hani@alghaswan.com">hani@alghaswan.com</a>
+      <a href="https://wa.me/97466858268" target="_blank">+974 6685 8268 (واتساب)</a>
+    </div>
+    <a class="btn" href="https://wa.me/97466858268" target="_blank">راسلنا الآن عبر واتساب</a>
+  </section>
+
+  <hr>
+
+  <section dir="ltr" lang="en">
+    <h2>About Us</h2>
+    <p>
+      Al Ghaswan is a leading Qatari-based trading group developing unique projects in furniture, perfumes, and food industries. We believe in innovation and sustainability, aiming to deliver high-quality products that meet local and international standards.
+    </p>
+
+    <h2>Our Companies</h2>
+    <div class="company">
+      <a href="https://foagroupqa.com/en-qa" target="_blank">FOA QATAR</a>
+      <a href="https://foagroupqa.com/en-qa/collections/spray-perfumes" target="_blank">AL ALWA OUD</a>
+    </div>
+
+    <h2>Contact</h2>
+    <div class="contact">
+      <a href="mailto:hani@alghaswan.com">hani@alghaswan.com</a>
+      <a href="https://wa.me/97466858268" target="_blank">+974 6685 8268 (WhatsApp)</a>
+    </div>
+    <a class="btn" href="https://wa.me/97466858268" target="_blank">Contact us via WhatsApp</a>
   </section>
 
   <footer>
