--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>شركة الغثوان للتجارة</title>
+  <title>شركة الغثوان التجارية</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -90,13 +90,13 @@
 
   <header>
     <img src="logo.png" alt="شعار الغثوان" class="logo">
-    <h1>شركة الغثوان للتجارة</h1>
+    <h1>شركة الغثوان التجارية</h1>
   </header>
 
   <section>
     <h2>من نحن</h2>
     <p>
-      شركة الغثوان هي مجموعة تجارية رائدة تتخذ من قطر مقرًا لها، وتعمل على تطوير مشاريع نوعية في مجالات المفروشات، والعطور، والصناعات الغذائية. نؤمن بالإبداع والاستدامة، ونهدف إلى تقديم منتجات وخدمات ذات جودة عالية تواكب تطلعات الأسواق المحلية والعالمية.
+      شركة الغثوان التجارية هي مجموعة تجارية رائدة تتخذ من قطر مقرًا لها، وتعمل على تطوير مشاريع نوعية في مجالات المفروشات، والعطور، والصناعات الغذائية. نؤمن بالإبداع والاستدامة، ونهدف إلى تقديم منتجات وخدمات ذات جودة عالية تواكب تطلعات الأسواق المحلية والعالمية.
     </p>
   </section>
 
@@ -122,7 +122,7 @@
   <section dir="ltr" lang="en">
     <h2>About Us</h2>
     <p>
-      Al Ghaswan is a leading Qatari-based trading group developing unique projects in furniture, perfumes, and food industries. We believe in innovation and sustainability, aiming to deliver high-quality products that meet local and international standards.
+      Al Ghaswan Trading Company is a leading Qatari-based group developing unique projects in furniture, perfumes, and food industries. We believe in innovation and sustainability, aiming to deliver high-quality products that meet local and international standards.
     </p>
 
     <h2>Our Companies</h2>
@@ -140,7 +140,7 @@
   </section>
 
   <footer>
-    جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان للتجارة
+    جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان التجارية
   </footer>
 
 </body>
