--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>شركة الغثوان التجارية</title>
   <style>
     body {
@@ -89,7 +89,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="شعار الغثوان" class="logo">
+    <img src="logo.png" alt="شعار الغثوان" class="logo" />
     <h1>شركة الغثوان التجارية</h1>
   </header>
 
@@ -117,12 +117,10 @@
     <a class="btn" href="https://wa.me/97466858268" target="_blank">راسلنا الآن عبر واتساب</a>
   </section>
 
-  <hr>
-
   <section dir="ltr" lang="en">
     <h2>About Us</h2>
     <p>
-      Al Ghaswan Trading Company is a leading Qatari-based group developing unique projects in furniture, perfumes, and food industries. We believe in innovation and sustainability, aiming to deliver high-quality products that meet local and international standards.
+      Al Ghaswan Trading is a leading Qatari-based group developing distinctive projects in furniture, perfumes, and food industries. We believe in creativity and sustainability, aiming to deliver high-quality products that meet both local and global market expectations.
     </p>
 
     <h2>Our Companies</h2>
@@ -137,6 +135,16 @@
       <a href="https://wa.me/97466858268" target="_blank">+974 6685 8268 (WhatsApp)</a>
     </div>
     <a class="btn" href="https://wa.me/97466858268" target="_blank">Contact us via WhatsApp</a>
+  </section>
+
+  <section>
+    <h2 style="color: #333; margin-top: 40px;">بروفايل الشركة</h2>
+    <p>يمكنك تصفح بروفايل شركة الغثوان التجارية مباشرة عبر النموذج أدناه:</p>
+    <iframe src="https://drive.google.com/file/d/1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4/preview" 
+            width="100%" 
+            height="600" 
+            style="border: none; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+    </iframe>
   </section>
 
   <footer>
