--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <h2>Contact</h2>
     <div class="contact">
       <a href="mailto:hani@alghaswan.com">hani@alghaswan.com</a>
-      <a href="https://wa.me/97466858268" target="_blank">+974 6685 8268 (WhatsApp)</a>
+      <a href="https://wa.me/97466858268" target="_blank">+97466858268 (WhatsApp)</a>
     </div>
     <a class="btn" href="https://wa.me/97466858268" target="_blank">Contact us via WhatsApp</a>
   </section>
