--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
       font-weight: bold;
     }
 
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
     footer {
       background: #eee;
       padding: 15px;
@@ -139,12 +147,8 @@
 
   <section>
     <h2 style="color: #333; margin-top: 40px;">بروفايل الشركة</h2>
-    <p>يمكنك تصفح بروفايل شركة الغثوان التجارية مباشرة عبر النموذج أدناه:</p>
-    <iframe src="https://drive.google.com/file/d/1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4/preview" 
-            width="100%" 
-            height="600" 
-            style="border: none; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-    </iframe>
+    <p>يمكنك تصفح بروفايل شركة الغثوان التجارية مباشرة عبر النموذج التالي:</p>
+    <iframe src="https://drive.google.com/file/d/1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4/preview"></iframe>
   </section>
 
   <footer>
