--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
       text-align: center;
       color: #333;
     }
-
     header {
       background-color: #ffffff;
       padding: 30px 10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-
     img.logo {
       width: 150px;
     }
-
     h1 {
       margin-top: 10px;
       color: #008c5f;
     }
-
     section {
       margin: 40px auto;
       max-width: 700px;
@@ -37,13 +33,11 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
-
     h2 {
       color: #444;
       margin-bottom: 10px;
     }
-
-    .company a {
+    .company a, .contact a {
       display: block;
       text-decoration: none;
       font-size: 18px;
@@ -51,46 +45,63 @@
       color: #0077cc;
       font-weight: bold;
     }
-
     .contact a {
-      display: block;
-      margin: 5px 0;
       color: #006400;
-      text-decoration: none;
       font-size: 16px;
     }
-
-    .btn {
+    .btn, .profile-btn {
       display: inline-block;
-      margin-top: 15px;
+      margin: 8px 5px;
       padding: 10px 20px;
       background: #008c5f;
       color: white;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
+      cursor: pointer;
     }
-
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-
     footer {
       background: #eee;
       padding: 15px;
       margin-top: 40px;
       font-size: 14px;
     }
-
     hr {
       margin: 40px auto;
       width: 80%;
       border: none;
       border-top: 1px solid #ccc;
+    }
+    .popup {
+      display: none;
+      position: fixed;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      max-width: 800px;
+      height: 80%;
+      background: white;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      border-radius: 12px;
+      z-index: 9999;
+    }
+    .popup iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 12px;
+    }
+    .close-popup {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: #c0392b;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -103,9 +114,7 @@
 
   <section>
     <h2>من نحن</h2>
-    <p>
-      شركة الغثوان التجارية هي مجموعة تجارية رائدة تتخذ من قطر مقرًا لها، وتعمل على تطوير مشاريع نوعية في مجالات المفروشات، والعطور، والصناعات الغذائية. نؤمن بالإبداع والاستدامة، ونهدف إلى تقديم منتجات وخدمات ذات جودة عالية تواكب تطلعات الأسواق المحلية والعالمية.
-    </p>
+    <p>شركة الغثوان التجارية هي مجموعة رائدة مقرها قطر، تطور مشاريع نوعية في المفروشات، العطور، والصناعات الغذائية. نؤمن بالإبداع والاستدامة، ونهدف لتقديم منتجات عالية الجودة.</p>
   </section>
 
   <section>
@@ -122,14 +131,14 @@
       <a href="mailto:hani@alghaswan.com">hani@alghaswan.com</a>
       <a href="https://wa.me/97466858268" target="_blank">+974 6685 8268 (واتساب)</a>
     </div>
-    <a class="btn" href="https://wa.me/97466858268" target="_blank">راسلنا الآن عبر واتساب</a>
+    <a class="btn" href="https://wa.me/97466858268" target="_blank">راسلنا عبر واتساب</a>
   </section>
+
+  <hr>
 
   <section dir="ltr" lang="en">
     <h2>About Us</h2>
-    <p>
-      Al Ghaswan Trading is a leading Qatari-based group developing distinctive projects in furniture, perfumes, and food industries. We believe in creativity and sustainability, aiming to deliver high-quality products that meet both local and global market expectations.
-    </p>
+    <p>Al Ghaswan Trading is a Qatar-based group developing unique projects in furniture, perfumes, and food. We believe in innovation and sustainability to deliver premium quality.</p>
 
     <h2>Our Companies</h2>
     <div class="company">
@@ -146,13 +155,31 @@
   </section>
 
   <section>
-    <h2 style="color: #333; margin-top: 40px;">بروفايل الشركة</h2>
-    <iframe src="https://drive.google.com/file/d/1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4/preview"></iframe>
+    <h2>بروفايل الشركة</h2>
+    <div>
+      <button class="profile-btn" onclick="openPopup()">📖 عرض البروفايل</button>
+      <a class="profile-btn" href="https://drive.google.com/uc?export=download&id=1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4" download>⬇️ تحميل</a>
+      <a class="profile-btn" href="javascript:window.print()">🖨️ طباعة</a>
+    </div>
   </section>
+
+  <div class="popup" id="popup">
+    <button class="close-popup" onclick="closePopup()">إغلاق</button>
+    <iframe src="https://drive.google.com/file/d/1wsfQgN8x1VT4ChX6s6FdAe2UJg2OY6g4/preview"></iframe>
+  </div>
 
   <footer>
     جميع الحقوق محفوظة &copy; 2025 لشركة الغثوان التجارية
   </footer>
+
+  <script>
+    function openPopup() {
+      document.getElementById("popup").style.display = "block";
+    }
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+    }
+  </script>
 
 </body>
 </html>
